# url_shortner_rust

api_server_rust/: .env.example  Cargo.toml
api_server_rust/migrations/: 20250115184810_users.sql  20250116204058_urls.sql
api_server_rust/src/: main.rs
api_server_rust/src/helpers/: hash_generator.rs  mod.rs
api_server_rust/src/middleware/: auth_middleware.rs
api_server_rust/src/models/: mod.rs  ticket.rs  url.rs  user.rs
api_server_rust/src/responses/: error.rs
api_server_rust/src/routes/: mod.rs
api_server_rust/src/routes/urls/: create.rs  get_url.rs  mod.rs
api_server_rust/src/routes/user/: create_user.rs  current_user.rs  login_user.rs
api_server_rust/src/token/: check_user_exists.rs  generate_token.rs  mod.rs
api_server_rust/tsmigrations/: 001_ticketsererdatabase.sql
