[package]
name = "api_server_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bcrypt = "0.16.0"
dotenvy = "0.15.7"
env_logger = "0.11.6"
jsonwebtoken = "9.3.0"
log = "0.4.25"
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres"] }
validator = { version = "0.19.0", features = ["derive"] }
